fix github 404 issue

--- a/404.html
+++ b/404.html
@@ -41,6 +41,11 @@
       content="s3.amazonaws.com/shiftride.api.media.prod/website/happy-shiftride-customer-1.jpg"
     />
 
+    <script>
+      var paths = window.location.pathname.split('/');
+      if (paths.length > 1) window.location.replace('https://shiftride.com/');
+    </script>
+
     <!--===============================================================================================-->
     <link rel="icon" type="image/png" href="images/icons/favicon.ico" />
     <!--===============================================================================================-->
